# MagnaCMS

./: .env.example  .gitignore  ARCHITECTURE.md  DEVLOG.md  KICKOFF_PROMPT.md  LICENSE  PHASES.md  PROJECT_BRIEF.md  README.md  SLICE_PLAN.md  docker-compose.yml  setup-github.sh
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  infra-ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260514_68c9768f3798_baseline_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routers/: auth.py  brand_voices.py  content.py  health.py  improve.py
backend/app/core/: aws_secrets.py  config.py  exceptions.py  logging.py  request_context.py  security.py
backend/app/db/: __init__.py  base.py  enums.py  session.py
backend/app/db/models/: __init__.py  brand_voice.py  content_piece.py  generated_image.py  improvement.py  refresh_token.py  usage_event.py  user.py
backend/app/middleware/: csrf.py  logging.py  rate_limit.py  request_id.py  security_headers.py
backend/app/prompts/: __init__.py  ad_copy.py  blog_post.py  email.py  image_prompt_builder.py  improver.py  linkedin_post.py
backend/app/providers/: __init__.py  errors.py  factory.py
backend/app/providers/image/: __init__.py  base.py  bedrock.py  mock.py  openai_provider.py
backend/app/providers/llm/: __init__.py  base.py  bedrock.py  mock.py  openai_provider.py
backend/app/repositories/: brand_voice_repository.py  content_repository.py  image_repository.py  improvement_repository.py  refresh_token_repository.py  user_repository.py
backend/app/schemas/: auth.py  brand_voice.py  content.py  image.py  improvement.py
backend/app/scripts/: __init__.py  seed.py
backend/app/services/: auth_service.py  brand_voice_service.py  content_service.py  export_service.py  image_service.py  image_storage.py  improver_service.py
backend/app/services/renderers/: __init__.py  ad_copy.py  blog_post.py  email.py  linkedin_post.py
backend/tests/: conftest.py  factories.py  test_ad_copy_renderer.py  test_ad_copy_validator.py  test_auth_schema_password.py  test_auth_service.py  test_aws_secrets.py  test_blog_post_renderer.py  test_brand_voice_service.py  test_content_service.py  test_cors.py  test_csrf_middleware.py  test_db_base.py  test_db_models.py  test_db_session.py  test_email_renderer.py  test_exception_envelope.py  test_export_service.py  test_hardening.py  test_health.py  test_image_regen_contention.py  test_image_service.py  test_image_storage.py  test_image_url_projection.py  test_improver_service.py  test_linkedin_post_renderer.py  test_localhost_cors_validator.py  test_prompts.py  test_rate_limit.py  test_rate_limit_patterns.py  test_security.py  test_security_headers.py  test_weak_password_error_code.py
backend/tests/integration/: conftest.py  test_auth_routes.py  test_brand_voices_routes.py  test_content_dashboard.py  test_content_routes.py  test_image_routes.py  test_improve_routes.py
backend/tests/providers/: test_bedrock_stubs.py  test_factory.py  test_mock_providers.py  test_openai_image.py  test_openai_llm.py
frontend/: .gitignore  .prettierignore  README.md  amplify.yml  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: providers.tsx  sidebar.tsx  user-menu.tsx
frontend/lib/: api.ts  auth-store.ts  utils.ts
frontend/tests/: auth-store.test.ts  brand-voices.test.tsx  content-list.test.tsx  generate-form.test.tsx  image-panel.test.tsx  improve-form.test.tsx  logout-clears-cache.test.tsx
frontend/types/: api.d.ts
infra/: .gitignore  DEPLOY.md  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infra/lib/: compute-stack.ts  config.ts  data-stack.ts  edge-stack.ts  endpoint-context.ts  network-stack.ts  observability-stack.ts
infra/test/: app-integration.test.ts  compute-stack.test.ts  config.test.ts  data-stack.test.ts  edge-stack.test.ts  endpoint-context.test.ts  network-stack.test.ts  observability-stack.test.ts
(+58 files in other folders)
